# AIAGENT14_JOB_AGENTS_SERVICE

./: .gitignore  BUG_FIXES_REPORT.md  CALL_PROCESSING_API_README.md  CHANGES_SUMMARY.md  COOLING_PERIOD_INTEGRATION_GUIDE.md  COOLING_PERIOD_QUICK_REFERENCE.md  COOLING_PERIOD_REMINDERS_README.md  COOLING_PERIOD_SYSTEM_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  GOOGLE_STT_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  README.md  SETUP_GUIDE.md  celery_worker.py  celerybeat-schedule-shm  celerybeat-schedule-wal  entrypoint.sh  hello.py  logging.yaml  output.txt  output_description.md  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/dependencies/: __init__.py  job_utils.py  progress.py  utils.py
app/api/endpoints/: __init__.py  call_api.py  cron_job_api.py  file_api.py  job_agent_api.py  job_post_api.py  pdf_api.py  pipeline_agent_api.py  test_api.py  websocket_api.py
app/api/reports/: __init__.py  clawback.py  exports.py  jobs.py  pipeline.py  recruiters.py
app/cache_db/: __init__.py  redis_config.py
app/celery/: __init__.py  celery_config.py
app/celery/tasks/: __init__.py  call_processing_tasks.py  cooling_period_task.py  cooling_period_tasks.py  (+3 more)
app/core/: __init__.py  config_dev.py  config_prod.py  logging.py
app/database_layer/: __init__.py  db_config.py  db_model.py  db_schema.py  db_store.py
app/models/: __init__.py  gemini_model.py  job_agents.py  pipeline_model.py
app/prompt_template/: job_agent_template.py
app/prompt_templates/: __init__.py  html_generation_prompt.py  job_agent_template.py  job_post_planning_prompt.py  pipeline_agent_template.py
app/repositories/: __init__.py  report_queries.py
app/schemas/: __init__.py  reports.py
app/services/: __init__.py  email_templates.py  emailer.py  excel_generator.py  exporters.py
app/utils/: __init__.py  audio_preprocessing.py  dimension_mapping.py  file_handler.py  file_storage.py  google_stt.py  transcript_chunker.py  transcript_normalizer.py
database_migrations/: -- Roles & Users.sql  001_create_notification_users_table.sql
docs/: report-api-architecture.md
(+5 files in other folders)
